# cowork

./: .gitignore  Makefile  README.md  README_ZH.md  package-lock.json  package.json  vite.config.ts
.fseventsd/: fseventsd-uuid
backend/: demo_langchain.py  init_langchain.py  main.py  pyproject.toml  requirements-langchain.txt  requirements.txt  test_langchain_install.py
backend/app/: main.py
backend/app/api/: __init__.py  agents.py  files.py  langchain.py  messages.py  schedules.py  sessions.py  settings.py  skillhub.py  skills.py  teams.py
backend/app/models/: schemas.py
backend/app/routers/: api.py
backend/app/services/: agent_runner.py  langchain_services.py  memory.py  orchestrator.py  settings.py
backend/app/services/langchain/: __init__.py  base.py  llm.py  orchestrator_state.py  rag.py  skills.py  tools.py  trace.py
backend/app/services/memory/: __init__.py  checkpoint.py  conversation.py  long_term.py  store.py
backend/app/services/skills/: __init__.py  base.py  manager.py
backend/app/services/tools/: __init__.py  base.py  builtin.py  manager.py
backend/docs/: memory-design.md
dist-electron/: main.cjs  main.js
docs/: ARCHITECTURE.md  IMPLEMENTATION_COMPLETE.md  LANGCHAIN_README.md  langchain-implementation-summary.md  langchain-integration.md  langchain-setup-guide.md  sse-stream-state-management.md  stream-status-requirement.md
docs/product/: PRODUCT_MANUAL.md  TECHNICAL_SKILLS.md
src/: index.css  index.html  main.ts  renderer.tsx
src/core/: CoreFileLoader.ts  MessageBus.ts  test-loader.ts
src/tests/: integration.ts  verify.ts
(+29 files in other folders)
