[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "mem0ai>=1.0.11",
    "openai>=2.31.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.24",
    "qdrant-client>=1.17.1",
    "uvicorn>=0.44.0",
]
